# circuit-tracer

./: .gitignore  README.md  main.py  pyproject.toml
prompts/: ioi_templates.jsonl
src/: config.py  logit_diff.py  metrics.py  patching.py  plotting.py  visualize.py
src/experiments/: activation_patching.py
src/ioi_repro/: __init__.py  dataset.py  model.py
tests/: test_dataset.py  test_metrics.py
