[project]
name = "circuit-tracer"
version = "0.1.0"
description = "Boilerplate for reproducing the IOI circuit experiments from Wang et al. (2022)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "circuitsvis>=1.43.3",
    "plotly>=6.7.0",
    "torch>=2.12.0",
    "transformer-lens>=3.3.0",
]

[project.scripts]
ioi-resid-patch = "ioi_repro.experiments.activation_patching:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ioi_repro"]
